--- a/historicoCorregido_testdiario.ipynb
+++ b/historicoCorregido_testdiario.ipynb
@@ -17,6 +17,15 @@
     "import urllib\n",
     "import TAPI\n",
     "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#funciones\n",
     "\n",
@@ -32,6 +41,29 @@
     "        yield fecha_actual, fecha_siguiente\n",
     "        # Añadir un día para la próxima iteración\n",
     "        fecha_actual += timedelta(days=1)\n",
+    "        \n",
+    "#Con este script se puede obtener la fecha del último documento cargado por CAMMESA\n",
+    "def  ultimo_dia_CAMM():\n",
+    "\n",
+    "    ultimafecha = requests.get(\"https://api.cammesa.com/pub-svc/public/obtieneFechaUltimoDocumento?nemo=PARTE_POST_OPERATIVO\")\n",
+    "\n",
+    "    #fecha = str(ultimafecha.text[10:-2])\n",
+    "    \n",
+    "    fecha = ultimafecha.text[10:-2]\n",
+    "\n",
+    "    # # Convertir la cadena a un objeto datetime\n",
+    "    # fecha_dt = datetime.strptime(fecha, \"%Y-%m-%d\")\n",
+    "\n",
+    "    # # Crear un objeto de zona horaria fija (-03:00)\n",
+    "    # zona_horaria = timezone(timedelta(hours=-3))\n",
+    "\n",
+    "    # # Agregar la zona horaria al objeto datetime\n",
+    "    # fecha_dt = fecha_dt.replace(tzinfo=zona_horaria)\n",
+    "\n",
+    "    # # Formatear el datetime como una cadena con el método isoformat()\n",
+    "    # fecha_formateada = fecha_dt.isoformat()\n",
+    "\n",
+    "    return fecha\n",
     "\n",
     "def ultimo_dia_bd():\n",
     "    server = 'DARCCVWSQL19'\n",
@@ -71,34 +103,35 @@
     "    # # Formatear el datetime como una cadena con el método isoformat()\n",
     "    # fecha_formateada = fecha_dt.isoformat()\n",
     "    \n",
-    "    return ultimo_dia\n",
-    "    "
+    "    return ultimo_dia"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fecha_desde = \"2023-01-01T00:00:00.000-03:00\"\n",
-    "fecha_hasta = \"2024-01-03T23:59:59.000-03:00\"\n",
-    "\n",
-    "for fecha_actual, fecha_siguiente in iterar_entre_fechas(fecha_desde, fecha_hasta):\n",
-    "    dia_mdb = fecha_actual.strftime(\"%d-%m-%Y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\jadurian\\Documents\\Tapi\\TAPI\\ultimo_dia_sql.py:27: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\12334485.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81216C076E7759DF03258B15008297AA\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     },
     {
@@ -112,7 +145,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     },
@@ -127,7 +160,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     },
@@ -142,7 +175,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     },
@@ -157,7 +190,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_17556\\3266416005.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3CAA2AC0F87E4D2203258B190077BD04\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_22720\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
      ]
     }
@@ -183,14 +231,21 @@
     "#-------------------------------------------------------#\n",
     "# Fechas para seleccionar el día de la carga se debe iterar\n",
     "\n",
-    "fecha_desde = TAPI.ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
-    "fecha_hasta = TAPI.ultimo_dia_CAMM()\n",
+    "fecha_desde_bd = ultimo_dia_bd() #OJO DE QUE TABLA TOMA EL ULTIMO DIA\n",
+    "fecha_datetime = datetime.strptime(fecha_desde_bd, \"%Y-%m-%d\")\n",
     "\n",
-    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\"\n",
-    "fecha_hasta = fecha_hasta+\"T00:00:00.000-03:00\"\n",
+    "# Sumar un día\n",
+    "fecha_siguiente = fecha_datetime + timedelta(days=1)\n",
     "\n",
-    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\"\n",
-    "fecha_hasta = fecha_hasta+\"T00:00:00.000-03:00\"\n",
+    "# Convertir de nuevo a string si es necesario\n",
+    "fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\")\n",
+    "fecha_hasta = ultimo_dia_CAMM()\n",
+    "\n",
+    "#fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
+    "#fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
+    "\n",
+    "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
+    "fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
@@ -349,108 +404,19 @@
     "        #6\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        \n",
-    "        #df_filtrado.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        df_filtrado.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
     "        #df_contratos.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
-    "        dfout = pd.concat([dfout,df_filtrado], ignore_index=True)\n",
+    "        #dfout = pd.concat([dfout,df_filtrado], ignore_index=True)\n",
     "\n",
-    "        dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
+    "        #dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
     "        #-------------------------------------------------------#\n",
     "\n",
     "    except FileNotFoundError:\n",
-    "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 15984 entries, 0 to 15983\n",
-      "Data columns (total 40 columns):\n",
-      " #   Column               Non-Null Count  Dtype  \n",
-      "---  ------               --------------  -----  \n",
-      " 0   FECHA                15984 non-null  object \n",
-      " 1   GRUPO                15984 non-null  object \n",
-      " 2   HORA                 15984 non-null  int64  \n",
-      " 3   ARL                  15984 non-null  int64  \n",
-      " 4   ESTADO_OPE           15984 non-null  object \n",
-      " 5   PI_SOTR              15984 non-null  float64\n",
-      " 6   ARL_ECON             15984 non-null  int64  \n",
-      " 7   EST_REMUN            15984 non-null  object \n",
-      " 8   ENERGIA              15984 non-null  float64\n",
-      " 9   PRECIO_NODO          15984 non-null  float64\n",
-      " 10  PR_REM_ENERGIA       9806 non-null   float64\n",
-      " 11  SMEC                 15984 non-null  object \n",
-      " 12  POT_DISP             15984 non-null  float64\n",
-      " 13  POT_OPE_CPO          13536 non-null  float64\n",
-      " 14  COMPRA_SPOT          15168 non-null  float64\n",
-      " 15  SCTD                 9249 non-null   float64\n",
-      " 16  SCO                  8601 non-null   float64\n",
-      " 17  PIND                 13536 non-null  float64\n",
-      " 18  PINDPROG             13536 non-null  float64\n",
-      " 19  PINDFORZ             13536 non-null  float64\n",
-      " 20  POT_DISP_GAS         15984 non-null  float64\n",
-      " 21  POT_DISP_RESERVA     0 non-null      object \n",
-      " 22  GAS_NOMINADO         0 non-null      object \n",
-      " 23  COSTO_406            15984 non-null  float64\n",
-      " 24  REM_ADICIONAL        15984 non-null  float64\n",
-      " 25  DESP_ECON            15984 non-null  object \n",
-      " 26  CCM                  120 non-null    float64\n",
-      " 27  CFO                  992 non-null    float64\n",
-      " 28  CGN                  4394 non-null   float64\n",
-      " 29  CGO                  3911 non-null   float64\n",
-      " 30  POT_DISP_R19         13512 non-null  float64\n",
-      " 31  FACTOR_KM            13512 non-null  float64\n",
-      " 32  HORA_REPRESENTATIVA  4106 non-null   object \n",
-      " 33  ENERG_GEN_TRANSAC    228 non-null    float64\n",
-      " 34  ENERG_OPE_TRANSAC    228 non-null    float64\n",
-      " 35  SOBREC_FORZ_PROPIO   0 non-null      object \n",
-      " 36  PGENE_RES354         264 non-null    float64\n",
-      " 37  CGU_PROPIO           264 non-null    float64\n",
-      " 38  CGU_MEM              264 non-null    float64\n",
-      " 39  CGU_GAS_CEDIDO       264 non-null    float64\n",
-      "dtypes: float64(27), int64(3), object(10)\n",
-      "memory usage: 4.9+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "valores_generadores.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "quoted = urllib.parse.quote_plus(connection_string)\n",
-    "engine = sqlalchemy.create_engine('mssql+pyodbc:///?odbc_connect={}'.format(quoted))\n",
-    "dfout.to_sql('DiarioTest', schema='dbo', con=engine, if_exists='append')"
+    "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
+    "\n",
+    "#dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
    ]
   }
  ],
