--- a/historicoCorregido_testdiario_contratos.ipynb
+++ b/historicoCorregido_testdiario_contratos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,9 +15,7 @@
     "from datetime import datetime, timedelta\n",
     "import sqlalchemy\n",
     "import urllib\n",
-    "import TAPI\n",
-    "\n",
-    "    "
+    "import TAPI   "
    ]
   },
   {
@@ -69,7 +67,7 @@
     "    server = 'DARCCVWSQL19'\n",
     "    #server = 'DESKTOP-37ESKFT\\SQLEXPRESS'\n",
     "    database = 'TAPI'\n",
-    "    tabla = 'DiarioTestAutomático'\n",
+    "    tabla = 'Valores_Gen_Diario_Automatico'\n",
     "\n",
     "    connection_string = f'DRIVER=ODBC Driver 17 for SQL Server;SERVER={server};DATABASE={database};Trusted_Connection=yes;'\n",
     "\n",
@@ -108,32 +106,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-05-12\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(ultimo_dia_CAMM())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27008\\12334485.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
       "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-05-03\n",
+      "2024-05-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(ultimo_dia_bd())\n",
+    "print(ultimo_dia_CAMM())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\826688139.py:58: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  df = pd.read_sql(query, connection)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "81216C076E7759DF03258B15008297AA\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1DB1F70C4078701703258B150082FCEE\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66CCAF0B2900DB1803258B1600780970\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F469D8CE2F9A7C8003258B1700780F44\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93A4B4DFF0484E0103258B18006C8D48\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3CAA2AC0F87E4D2203258B190077BD04\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
     {
@@ -147,8 +257,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27008\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
     {
@@ -162,8 +274,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27008\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     },
     {
@@ -177,8 +291,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_27008\\3510649562.py:134: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n"
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:136: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
+      "C:\\Users\\jadurian\\AppData\\Local\\Temp\\ipykernel_12864\\1918142213.py:137: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
+      "  contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n"
      ]
     }
    ],
@@ -195,7 +311,8 @@
     "#tabla = \"Hist_Bk\"\n",
     "#tabla = 'Contratos_diario'\n",
     "#tabla = \"Contratos_Corregidos_bk\"\n",
-    "tabla = 'DiarioTestAutomático'\n",
+    "tabla_valores = 'Valores_Gen_Diario_Automatico'\n",
+    "tabla_contratos = 'Contratos_Diario_Automatico'\n",
     "\n",
     "#-------------------------------------------------------#\n",
     "\n",
@@ -213,11 +330,11 @@
     "fecha_desde = fecha_siguiente.strftime(\"%Y-%m-%d\")\n",
     "fecha_hasta = ultimo_dia_CAMM()\n",
     "\n",
-    "#fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
-    "#fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
-    "\n",
     "fecha_desde = fecha_desde+\"T00:00:00.000-03:00\" \n",
     "fecha_hasta = fecha_hasta+\"T23:59:00.000-03:00\"\n",
+    "\n",
+    "#fecha_hasta = \"2024-05-03T23:59:59.000-03:00\"\n",
+    "#fecha_desde = \"2024-05-01T00:00:00.000-03:00\"\n",
     "\n",
     "#Defino la tabla de CAMMESA que me voy a traer\n",
     "#NEMO = \"PARTE_POST_OPERATIVO_UNIF\"\n",
@@ -246,6 +363,7 @@
     "\n",
     "dataframes = []\n",
     "dfout = pd.DataFrame()\n",
+    "dfout2 = pd.DataFrame()\n",
     "df_filtrado = pd.DataFrame()\n",
     "\n",
     "for fecha_actual, fecha_siguiente in iterar_entre_fechas(fecha_desde, fecha_hasta):\n",
@@ -317,7 +435,7 @@
     "        #3\n",
     "        #-------------------------------------------------------#\n",
     "        valores_generadores = pd.read_sql(\"SELECT * FROM VALORES_GENERADORES\", conn)\n",
-    "        #contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n",
+    "        contrato_abastecimiento = pd.read_sql(\"SELECT * FROM CONTRATO_ABASTECIMIENTO\", conn)\n",
     "        #-------------------------------------------------------#\n",
     "        conn.close()\n",
     "        \n",
@@ -333,7 +451,7 @@
     "        #-------------------------------------------------------#\n",
     "        valores_generadores.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "\n",
-    "        #contrato_abastecimiento.insert(0, 'FECHA', dia_mdb_formatted)\n",
+    "        contrato_abastecimiento.insert(0, 'FECHA', dia_mdb_formatted)\n",
     "        #-------------------------------------------------------#\n",
     "        quoted = urllib.parse.quote_plus(connection_string)\n",
     "\n",
@@ -359,9 +477,9 @@
     "        #5\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        df_filtrado = valores_generadores[valores_generadores[\"GRUPO\"].isin(valores_filtrados)]  \n",
+    "        df_valores = valores_generadores[valores_generadores[\"GRUPO\"].isin(valores_filtrados)]  \n",
     "        \n",
-    "        #df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)] \n",
+    "        df_contratos = contrato_abastecimiento[contrato_abastecimiento[\"CONTRATO\"].isin(contratos_filtrados)] \n",
     "\n",
     "        #-------------------------------------------------------#\n",
     "\n",
@@ -376,19 +494,20 @@
     "        #6\n",
     "        #-------------------------------------------------------#\n",
     "\n",
-    "        df_filtrado.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        df_valores.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "#\n",
+    "        df_contratos.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
     "\n",
-    "        #df_contratos.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists='append', chunksize=20000)\n",
+    "        #dfout = pd.concat([dfout,df_valores], ignore_index=True)\n",
+    "        #dfout2 = pd.concat([dfout2, df_contratos], ignore_index=True)\n",
     "\n",
-    "        #dfout = pd.concat([dfout,df_filtrado], ignore_index=True)\n",
-    "\n",
-    "        #dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
     "        #-------------------------------------------------------#\n",
-    "\n",
+    "        \n",
     "    except FileNotFoundError:\n",
     "        print(f\"El archivo {zip_name} no se encontró. Saltando al siguiente archivo...\")\n",
     "\n",
-    "#dfout.to_sql(f'{tabla}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
+    "#dfout.to_sql(f'{tabla_valores}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)\n",
+    "#dfout2.to_sql(f'{tabla_contratos}', schema='dbo', con=engine, if_exists=\"replace\", chunksize=20000)"
    ]
   }
  ],
